[metadata]
name = <project_name>
long_description = file: README.md
long_description_content_type = text/markdown

[flake8]
max-line-length = 125
max-complexity = 15

[isort]
combine_as_imports = True
float_to_top = True
force_grid_wrap = 4
include_trailing_comma = True
line_length = 125
lines_after_imports = 2
multi_line_output = 3
skip = __init__.py
